# AgildoFinancas

./: .github⁄workflows⁄build.yml  .gitignore  CMakeLists.txt  README.md  pubspec.yaml
.github/workflows/: .github⁄workflows⁄flutter_build.yml  build.yml  flutter_build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/agildosoft/agildo_financas/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: database_helper.dart  main.dart  models.dart
lib/dialogs/: despesas_fixas_dialog.dart  editar_despesa_fixa_dialog.dart  editar_lancamento_dialog.dart
lib/screens/: home_screen.dart
lib/utils/: formatters.dart
lib/widgets/: app_button.dart  summary_card.dart  toggle_chip.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
qml/: Main.qml
src/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  main.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
